tolist change for sonar